# watson-osint

./: .env.example  .gitignore  LICENSE  README.md  WATSON_ARCHITECTURE.md  pyproject.toml  requirements.txt  run_web.sh
.github/workflows/: ci.yml
data/: bellingcat_toolkit.csv
docs/: contributing.md
scripts/: set_api_key.py
skills/watson-osint/: SKILL.md
src/watson/: __init__.py  cli.py
src/watson/core/: dispatcher.py  engine.py  models.py  reporter.py
src/watson/tools/: __init__.py  base.py  captcha.py  conflict.py  corporate.py  geolocation.py  image_video.py  people.py  registry.py  satellite.py  scraper.py  social_media.py  websites.py
src/watson/utils/: helpers.py  http.py
tests/: test_core.py
watson/: __init__.py  cli.py  engine.py  graph.py  mcp_server.py
watson/agents/: __init__.py  base.py  direct.py  hermes.py
watson/web/: __init__.py  app.py
watson/web/templates/: chat.html
web/: DEPRECATED.md  app.py
web/exports/: Gambirasio_20260601_1428.json  WATSON-ELON-2026-EVIDENCE.md  deepmind_20260601_1417.json  deepmind_20260601_1420.json  deepmind_20260601_1425.json  deepmind_20260601_1431.json  deepmind_20260601_1431.md  sundar_pichai_20260601_1508.json  test_20260601_1418.json  test_20260601_1424.md
web/templates/: chat.html  index.html
