[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watson-osint"
version = "0.1.0"
description = "Open-source OSINT research agent deploying the Bellingcat investigation toolkit — investigate anything, everywhere, in parallel."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lorenzo Baron", email = "lorenzobarone@gmail.com"}
]
keywords = ["osint", "investigation", "bellingcat", "research", "open-source-intelligence", "journalism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "python-whois>=0.8",
    "ddgs>=8.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "build", "twine"]

[project.scripts]
watson = "watson.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watson"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
